--- a/public_html/about.html
+++ b/public_html/about.html
@@ -18,8 +18,8 @@
         text-align:center;
         font-size: 35px;
         font-family: Engravers MT;
-        border-bottom: solid #653119;
-        border-top: solid #653119;
+        border-bottom: solid #078fe8;
+        border-top: solid #078fe8;
         padding: 30px 0px 30px 0px;
     }
 </style>
