--- a/public_html/games.html
+++ b/public_html/games.html
@@ -18,8 +18,8 @@
         text-align:center;
         font-size: 35px;
         font-family: Engravers MT;
-        border-bottom: solid #653119;
-        border-top: solid #653119;
+        border-bottom: solid #078fe8;
+        border-top: solid #078fe8;
         padding: 30px 0px 30px 0px;
     }
 </style>
@@ -85,7 +85,7 @@ border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0p
       <tr>
         <td>Mini Golf</td>
         <td>A movable game of 6-hole golf.</td>
-        <td>$25 for the first hour and $15 for each additional hour.</td>
+        <td>$25 for the first hour and $10 for each additional hour.</td>
       </tr>
       <tr>
         <td>Croquet</td>
