--- a/public_html/about.html
+++ b/public_html/about.html
@@ -68,7 +68,7 @@
 
 
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
-border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;"> Pop Up Games</h1>
+border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0px;"> Pop Up Games</h1>
 
   <img src="img/logo1.jpeg" alt="Pop Up Games Logo"/>
   
