--- a/public_html/testimonials.html
+++ b/public_html/testimonials.html
@@ -67,12 +67,9 @@ border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0p
 
   <img src="img/logo.jpg" alt="Pop Up Games Logo"/>
 
+<h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
+border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0px;"> Testimonials</h1>  
   
-  
-
-  
-  <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
-border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;"> Testimonials</h1>
 
   <h3>Sara Rigley</h3>
   <p>"I have played many outdoor games, but these were my favorite!"</p>
