--- a/public_html/events.html
+++ b/public_html/events.html
@@ -84,6 +84,8 @@ border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0p
     <h3>"NACHO" Typical Pool Party</h3>
     <img alt='Pi Phi Event' src='img/nachopool1.jpg'/>
     <p>CEO recruitment event</p>
+    <h2>Upcoming Events</h2>
+    <h3>Children's costume party and parade</h3>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
