--- a/public_html/events.html
+++ b/public_html/events.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/sandstone/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/css_karson_richardson.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
 <style>
     h2 {
