updating contact and login pages

--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -78,13 +78,9 @@ border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0p
 <p>CEO Phone Number: 515-808-0297</p>
 <h3>Email</h3>
 <p>Pop Up Games Email: popupgames@gmail.com</p>
-<p>CEO Email: ceo@my.simpson.edu</p>
 <h3>Social Media</h3>
-<p>Facebook: Simpson Collegiate Entrepreneurs</p>
-<p>Twitter: Simpson CEO</p>
-<p>Instagram: Simpson CEO</p>
-<p>YouTube: CEO</p>
-<p>Snapchat: Simpson CEO</p> 
+<p>Facebook: Pop Up Games</p>
+
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
