--- a/public_html/login.html
+++ b/public_html/login.html
@@ -91,13 +91,9 @@ border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0p
 </form>
 <br>
 
-<p>This log-in page is for your favorite Iowa home-town boys, the Boot 'N Beer Band. 
-This page allows you to make an account with this website so you can keep up with the 
-band, find out about important dates, see special brand advertisements, or just to get 
-to know your favorite band members of the group!</p>
+<p>This log-in page is for log in.</p>
 
-<p>Has all links for other pages about the band and their events, schedules, merchandising, 
-and contact information.</p>
+
 
 <br>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
