--- a/public_html/signup.html
+++ b/public_html/signup.html
@@ -78,9 +78,7 @@ border-bottom: solid #078fe8;border-top: solid #078fe8;padding: 30px 0px 30px 0p
 
 <h1>Sign Up Page</h1>
 
-<p>By creating an account, you will be able to keep a shopping cart of merchandise you 
-intend on purchasing if you leave the website. You will also be notified whenever information 
-on any of the pages have been updated.</p>
+<p>By creating an account, you will be able to keep updated on upcoming events and new games being added.</p>
 
 <form style = "margin-left:20px; width:25%;">
     <div class="form-group">
